--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
 <head>
 	<title>Code Geeks</title>
+	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-	
-	<h1>This is just a demo website to check github hosting.</h1>
+	<div class="container">
+		<h1>This is just a demo website to check github hosting.</h1>
+	</div>
 </body>
 </html>
